# llm_evaluation_ragas

./: .gitignore  Makefile  README.md  compare_results.csv  pyproject.toml
examples/: bench_speed.py  compare_models.py  eval_ragas.py  run_examples.py
src/agent_skeletons/: __init__.py  skeletons.py
tests/: test_builders.py
