[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent_skeletons_ollama"
version = "0.2.0"
description = "Skeletons de raciocínio para agentes LLM com LangChain/LangGraph rodando com Ollama (Chroma retriever)."
authors = [{ name = "Pablo Santos" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "langchain>=0.3.7",
  "langchain-core>=0.3.15",
  "langgraph>=0.2.35",
  "pydantic>=2.7",
  "typing-extensions>=4.9.0",
  "langchain-ollama>=0.1.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
]
rag = [
  "chromadb>=0.5.5",
]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
